k8s/cloud/base/shared/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: explore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        monitoring: enabled
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '7000'
    spec:
      containers:
      - name: auth-service
        image: auth-service:version3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: explore
  labels:
    app: auth-service
    monitoring: enabled
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 7000
    targetPort: 7000
