k8s/cloud/base/shared/bff-marketing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-marketing
  namespace: explore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-marketing
  template:
    metadata:
      labels:
        app: bff-marketing
        monitoring: enabled
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '7010'
    spec:
      containers:
      - name: bff-marketing
        image: bff-marketing:version3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7010
---
apiVersion: v1
kind: Service
metadata:
  name: bff-marketing
  namespace: explore
  labels:
    app: bff-marketing
    monitoring: enabled
spec:
  selector:
    app: bff-marketing
  ports:
  - name: http
    port: 7010
    targetPort: 7010
