k8s/cloud/base/shared/bff-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-production
  namespace: explore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-production
  template:
    metadata:
      labels:
        app: bff-production
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "7011"
    spec:
      containers:
        - name: bff-production
          image: bff-production:version3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7011
---
apiVersion: v1
kind: Service
metadata:
  name: bff-production
  namespace: explore
spec:
  selector:
    app: bff-production
  ports:
    - name: http
      port: 7011
      targetPort: 7011
