k8s/cloud/base/shared/bff-talents.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-talents
  namespace: explore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-talents
  template:
    metadata:
      labels:
        app: bff-talents
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "7012"
    spec:
      containers:
        - name: bff-talents
          image: bff-talents:version3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7012
---
apiVersion: v1
kind: Service
metadata:
  name: bff-talents
  namespace: explore
spec:
  selector:
    app: bff-talents
  ports:
    - name: http
      port: 7012
      targetPort: 7012
