k8s/cloud/base/shared/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: explore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
        monitoring: enabled
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '7001'
    spec:
      containers:
      - name: notification-service
        image: notification-service:version3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: explore
  labels:
    app: notification-service
    monitoring: enabled
spec:
  selector:
    app: notification-service
  ports:
  - name: http
    port: 7001
    targetPort: 7001
